--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                     <a class="nav-link" href="gallery.html">Gallery</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="restaurant.html">Restaurant</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 </ul>
@@ -57,7 +60,7 @@
                       <div class="col-lg-8">
                           <h6 class="text-white">WELCOME TO MIRABELLE</h6>
                           <h1 class="display-1 my-3 fw-bold text-white">Enjoy Delicious Sushi Food</h1>
-                          <a href="#" class="btn btn-brand" id="btn">Reservation</a>
+                          <a href="contact.html" class="btn btn-brand" id="btn">Reservation</a>
                       </div>
                   </div>
               </div>
@@ -69,7 +72,7 @@
                       <div class="col-lg-8">
                           <h6 class="text-white">WELCOME TO MIRABELLE</h6>
                           <h1 class="display-1 my-3 fw-bold text-white">Fresh & Tasty Food</h1>
-                          <a href="#" class="btn btn-brand" id="btn">Reservation</a>
+                          <a href="contact.html" class="btn btn-brand" id="btn">Reservation</a>
                       </div>
                   </div>
               </div>
@@ -81,7 +84,7 @@
                     <div class="col-lg-8">
                         <h6 class="text-white">WELCOME TO MIRABELLE</h6>
                         <h1 class="display-1 my-3 fw-bold text-white">Awesome & Savory Recipes</h1>
-                        <a href="#" class="btn btn-brand" id="btn">Reservation</a>
+                        <a href="contact.html" class="btn btn-brand" id="btn">Reservation</a>
                     </div>
                 </div>
             </div>
@@ -100,20 +103,20 @@
 
     <div class="container d-flex align-content-center pt-2">
       <div class="col-sm-6 m-2 mb-sm-0">
-        <div class="card">
+        <div class="card"> 
           <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-cover">Go somewhere</a>
+            <h5 class="card-title">Mirabelle Newsletter + 5% Promo</h5>
+            <p class="card-text">Sign up here to receive our news, events and promotions via our newsletter. And you'll get 5% discount.</p>
+            <a href="#" class="btn btn-cover">SUBSCRIBE HERE</a>
           </div>
         </div>
       </div>
       <div class="col-sm-6 m-2">
         <div class="card bg-cover">
           <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-cover">Go somewhere</a>
+            <h5 class="card-title">New Year's Eve With Mirabelle</h5>
+            <p class="card-text">Let us be a part of the celebration and leave the cooking to us. Book a table or order takeaway now!</p>
+            <a href="#" class="btn btn-cover">READ MORE</a>
           </div>
         </div>
       </div>
