--- a/menu.html
+++ b/menu.html
@@ -38,6 +38,9 @@
                     <a class="nav-link" href="gallery.html">Gallery</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="restaurant.html">Restaurant</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 </ul>
@@ -56,50 +59,58 @@
             <h3 class="serif">STARTERS</h3>
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
                 <div class="me-2 me-auto">
-                    <div class="fw-bold mb-1">Edamame</div>
-                    <span class="Price bg-warning rounded-pill fs-6">2,95&#8364;</span>
+                    <div class="fw-bold mb-1">Edamame
+                    <span class="badge text-black rounded-pill fs-6 ">2,95&#8364;</span>
+                </div>
                 </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
                 <div class="me-2 me-auto">
-                    <div class="fw-bold mb-1">Salmon Sashimi</div>
-                    <span class="badge bg-info rounded-pill fs-6">2,95&#8364;</span>
+                    <div class="fw-bold mb-1">Salmon Sashimi
+                    <span class="badge text-black rounded-pill fs-6">2,95&#8364;</span>
+                </div>
                 </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
                 <div class="me-2 me-auto">
-                    <div class="fw-bold mb-1">Spicy salmon tartar<span style="color:red ; font-weight: lighter;"><i> (Hot)</i></span></div>
-                    <span class="badge bg-secondary rounded-pill fs-6">2,95&#8364;</span>
+                    <div class="fw-bold mb-1">Spicy salmon tartar<span style="color:red ; font-weight: lighter;"><i> (Hot)</i></span>
+                    <span class="badge text-black rounded-pill fs-6">2,95&#8364;</span>
+                </div>
+            </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
+                <div class="me-2 me-auto">
+                    <div class="fw-bold mb-1">Shrimp tempura
+                    <span class="badge  text-black rounded-pill fs-6">11,95&#8364;</span>
+                </div>
                 </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
                 <div class="me-2 me-auto">
-                    <div class="fw-bold mb-1">Shrimp tempura</div>
-                    <span class="badge bg-warning rounded-pill fs-6">11,95&#8364;</span>
+                    <div class="fw-bold mb-1">Chicken vegetable gyoza
+                    <span class="badge text-black rounded-pill fs-6">9,95&#8364;</span>
+                </div>
                 </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
                 <div class="me-2 me-auto">
-                    <div class="fw-bold mb-1">Chicken vegetable gyoza</div>
-                    <span class="badge bg-dark rounded-pill fs-6">9,95&#8364;</span>
+                    <div class="fw-bold mb-1">Beef gyoza
+                    <span class="badge text-black rounded-pill fs-6">7,95&#8364;</span>
+                </div>
                 </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
                 <div class="me-2 me-auto">
-                    <div class="fw-bold mb-1">Beef gyoza</div>
-                    <span class="badge bg-dark rounded-pill fs-6">7,95&#8364;</span>
+                    <div class="fw-bold mb-1">Vegetables gyoza<span style="color:rgb(17, 172, 17); font-weight: lighter;"><i> (Veggie)</i></span>
+                    <span class="badge text-black rounded-pill fs-6">6,95&#8364;</span>
+                </div>
                 </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
                 <div class="me-2 me-auto">
-                    <div class="fw-bold mb-1">Vegetables gyoza<span style="color:rgb(17, 172, 17); font-weight: lighter;"><i> (Veggie)</i></span></div>
-                    <span class="badge bg-dark rounded-pill fs-6">6,95&#8364;</span>
+                    <div class="fw-bold mb-1">Duck gyoza
+                    <span class="badge text-black rounded-pill fs-6">8,95&#8364;</span>
                 </div>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
-                <div class="me-2 me-auto">
-                    <div class="fw-bold mb-1">Duck gyoza</div>
-                    <span class="Price bg-warning rounded-pill fs-6">8,95&#8364;</span>
                 </div>
             </li>
         </div>
@@ -108,75 +119,85 @@
         <h3 class="serif">CLASSIC ROLLS</h3>
         <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
             <div class="me-2 me-auto">
-                <div class="fw-bold mb-1">Salmon Avocado</div>
-                <p>Salmon, Avocado</p>
-                <span class="Price bg-warning rounded-pill fs-6">5,95&#8364;</span>
+                <div class="fw-bold mb-1">Salmon Avocado
+                <span class="badge text-black rounded-pill fs-6">5,95&#8364;</span>
+                <p class="fw-normal">Salmon, Avocado</p>
+            </div>
             </div>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
             <div class="me-2 me-auto">
-                <div class="fw-bold mb-1">Salmon Spicy<span style="color:red ; font-weight: lighter;"><i> (Hot)</i></span></div>
-                <p>Salmon, avocado, spicy Sauce</p>
-                <span class="Price bg-warning rounded-pill fs-6">5,95&#8364;</span>
+                <div class="fw-bold mb-1">Salmon Spicy<span style="color:red ; font-weight: lighter;"><i> (Hot)</i></span>
+                <span class="badge text-black rounded-pill fs-6">5,95&#8364;</span>
+                <p class="fw-normal">Salmon, avocado, spicy Sauce</p>
+            </div>
             </div>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
             <div class="me-2 me-auto">
-                <div class="fw-bold mb-1">Salmon Fresh</div>
-                <p>Salmon, avocado, cream cheese, chive</p>
-                <span class="Price bg-warning rounded-pill fs-6">5,95&#8364;</span>
+                <div class="fw-bold mb-1">Salmon Fresh
+                <span class="badge text-black rounded-pill fs-6">5,95&#8364;</span>
+                <p class="fw-normal">Salmon, avocado, cream cheese, chive</p>
+            </div>
             </div>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
             <div class="me-2 me-auto">
-                <div class="fw-bold mb-1">Yakitori</div>
-                <p>Chicken, avocado, cucumber, unagi Sauce</p>
-                <span class="Price bg-warning rounded-pill fs-6">5,95&#8364;</span>
+                <div class="fw-bold mb-1">Yakitori
+                <span class="badge text-black rounded-pill fs-6">5,95&#8364;</span>
+                <p class="fw-normal">Chicken, avocado, cucumber, unagi Sauce</p>
+            </div>
             </div>
         </li>
     
     <div class="col-12 col-lg-8">
-        <h3 class="serif">SPECIAL ROLLS</h3>
+        <h3 class="">SPECIAL ROLLS</h3>
         <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
             <div class="me-2 me-auto">
-                <div class="fw-bold mb-1">Mango</div>
-                <p>Fried chicken, green apple, avocado, chives with chef's mango sauce</p>
-                <span class="Price bg-warning rounded-pill fs-6">8,95&#8364;</span>
+                <div class="fw-bold mb-1">Mango
+                <span class="badge text-black rounded-pill fs-6">8,95&#8364;</span>
+                <p class="fw-normal">Fried chicken, green apple, avocado, chives with chef's mango sauce</p>
+            </div>
             </div>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
             <div class="me-2 me-auto">
-                <div class="fw-bold mb-1">Hashi</div>
-                <p>Tempura shrimp, cucumber, flamed salmon, Japanese mayonnaise, unagi sauce</p>
-                <span class="Price bg-warning rounded-pill fs-6">8,95&#8364;</span>
+                <div class="fw-bold mb-1">Hashi
+                <span class="badge text-black rounded-pill fs-6">8,95&#8364;</span>
+                <p class="fw-normal">Tempura shrimp, cucumber, flamed salmon, Japanese mayonnaise, unagi sauce</p>
+            </div>
             </div>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
             <div class="me-2 me-auto">
-                <div class="fw-bold mb-1">Sakana<span style="color:red ; font-weight: lighter;"><i> (Hot)</i></span></div>
-                <p>Spicy salmon tartar, fried onion, avocado, flamed salmon, Alaska salmon eggs, chives</p>
-                <span class="Price bg-warning rounded-pill fs-6">10,95&#8364;</span>
+                <div class="fw-bold mb-1">Sakana<span style="color:red ; font-weight: lighter;"><i> (Hot)</i></span>
+                <span class="badge text-black rounded-pill fs-6">10,95&#8364;</span>
+                <p class="fw-normal">Spicy salmon tartar, fried onion, avocado, flamed salmon, Alaska salmon eggs, chives</p>
+            </div>
             </div>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
             <div class="me-2 me-auto">
-                <div class="fw-bold mb-1">Daïshï</div>
-                <p>Tempura shrimp, cucumber, flambed beef, japanese mayonnaise, unagi sauce, masago eggs and avocado</p>
-                <span class="Price bg-warning rounded-pill fs-6">9,95&#8364;</span>
+                <div class="fw-bold mb-1">Daïshï
+                <span class="badge text-black rounded-pill fs-6">9,95&#8364;</span>
+                <p class="fw-normal">Tempura shrimp, cucumber, flambed beef, japanese mayonnaise, unagi sauce, masago eggs and avocado</p>
+            </div>
             </div>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
             <div class="me-2 me-auto">
-                <div class="fw-bold mb-1">Dragon</div>
-                <p>Pork, salmon, cream cheese, avocado, unagi sauce, fried onions</p>
-                <span class="Price bg-warning rounded-pill fs-6">8,95&#8364;</span>
+                <div class="fw-bold mb-1">Dragon
+                <span class="badge text-black rounded-pill fs-6">8,95&#8364;</span>
+                <p class="fw-normal">Pork, salmon, cream cheese, avocado, unagi sauce, fried onions</p>
+            </div>
             </div>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
             <div class="me-2 me-auto">
-                <div class="fw-bold mb-1">Yasaï<span style="color:rgb(17, 172, 17); font-weight: lighter;"><i> (Veggie)</i></span></div>
-                <p>Avocado, mango, cream cheese, teriyaki sauce, fried onions</p>
-                <span class="Price bg-warning rounded-pill fs-6">7,95&#8364;</span>
+                <div class="fw-bold mb-1">Yasaï<span style="color:rgb(17, 172, 17); font-weight: lighter;"><i> (Veggie)</i></span>
+                <span class="badge text-black rounded-pill fs-6">7,95&#8364;</span>
+                <p class="fw-normal">Avocado, mango, cream cheese, teriyaki sauce, fried onions</p>
+            </div>
             </div>
         </li>
  </section>
