--- a/gallery.html
+++ b/gallery.html
@@ -38,6 +38,9 @@
                     <a class="nav-link" href="gallery.html">Gallery</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="restaurant.html">Restaurant</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 </ul>
