--- a/restaurant.html
+++ b/restaurant.html
@@ -38,6 +38,9 @@
                     <a class="nav-link" href="gallery.html">Gallery</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="restaurant.html">Restaurant</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 </ul>
@@ -49,18 +52,15 @@
             </div>
           </nav>
     </header>
-    <div class="container mt-5">
-      <h1 class="d-flex justify-content-center" style="font-family: 'Dancing Script', cursive; color: #F58d17;">Contact Us</h1>
-
-      <!-- Locations -->
-      <h2>Locations</h2>
+    <div class="container my-5">
+      <h1 class="d-flex justify-content-center" style="font-family: 'Dancing Script', cursive; color: #F58d17;">Location</h1>
         <div class="col-md-6">
-          <h3>Sushi Restaurant - Main Branch</h3>
-          <p>123 Main Street<br>
-             Anytown, USA 12345</p>
+          <h3>Mirabelle</h3>
+          <p>Cantersteen 10<br>
+             1000 Brussels</p>
           <p>
-            <strong>Hours:</strong><br>
-            Monday-Saturday: 11:00am-9:00pm<br>
+            <strong>Opening Hours :</strong><br>
+            Monday-Saturday : 11:00 am - 10:00 pm<br> 
             Sunday: Closed
           </p>
         </div>
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <form class=" container">
+      <!--<form class=" container">
           <div class="form-group">
             <label for="firstname">First Name</label>
             <input type="text" class="form-control" id="firstname" placeholder="Enter first name">
@@ -96,7 +96,7 @@
             <textarea class="form-control" id="message" rows="3"></textarea>
           </div>
           <button type="submit" class="btn btn-outline-dark">Send</button>
-        </form>
+        </form>//-->
 
 
 
